--- a/NEWS
+++ b/NEWS
@@ -557,15 +557,21 @@ version 0.99.3: (2017-09-22)
 - Format in `BASiCS_VarThresholdSearchHVG`
 - Format in `HiddenThresholdSearchDetectHVG_LVG`
 
+version 0.99.3: (2017-09-22)
+
+- Calculations in `BASiCS_DenoisedRates` moved to C++ to increase speed
+
+
 - TODO:
   * Clean-up cpp code as in Biomark model
+  * Move denoised counts to C++
 
 - DEVELOPMENT NOTES (potential future changes):
+  * Add examples for Denoised rates/counts
   * Delete BASiCS_VarianceDecomp? 
   * Change plots to use ggplot2?
   * Should we separate BASiCS_TestDE in two functions? 
   * In plots, change axis labels to be text (no greek)?
-  * Implement BASiCS_Denoise in C++
   * Create 'no longer in use' message for selected functions. 
   * Implement change suggested by Giacomo Zanella
   * Store all necessary parameters for chain restart
