--- a/NEWS
+++ b/NEWS
@@ -570,6 +570,11 @@ version 0.99.3: (2017-09-24)
   * Formating of long lines
   * Removal of no-longer-required functions and debug lines
 
+version 0.99.3: (2017-09-25)
+- Edits in `HiddenBASiCS_MCMCcpp` and associated C++ functions
+  * Optimization of MH updates
+- NOTE: batch case is broken!
+  
 
 - TODO:
   * Clean-up cpp code as in Biomark model
