--- a/NEWS
+++ b/NEWS
@@ -578,6 +578,8 @@ version 0.99.3: (2017-09-25)
 - Edits in `HiddenBASiCS_MCMCcpp` and associated C++ functions
   * Batch & no-batch versions merged in a single function
   * Avoids double transponse for chain storage
+  
+version 0.99.4: (2017-09-25)
 
 - DEVELOPMENT NOTES (potential future changes):
   * Add examples for Denoised rates/counts
