--- a/NEWS
+++ b/NEWS
@@ -588,6 +588,10 @@ version 0.99.4: (2017-09-25)
 - R CMD CHECK passed
 - R CMD BiocCheck passed
   
+version 0.99.5: (2017-09-26)  
+- Change of default `PriorDelta` value in `BASiCS_MCMC` 
+- Unit tests modified accordingly
+  
 - DEVELOPMENT NOTES (potential future changes):
   * Delete BASiCS_VarianceDecomp? 
   * Change plots to use ggplot2?
